2009-06-03  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (new_from_stream_thread): Fix
	a double-free when downloading YouTube video thumbnails.

2009-05-31  Philip Withnall  <philip@tecnocode.co.uk>

	* docs/reference/Makefile.am: Add the builddir to gtkdoc-mkhtml's
	path so that builddir != srcdir builds work for the documentation.
	(Closes: #581723)

2009-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_handle_element_message): Fix small compilation warning

2009-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(get_lang_list_for_type): Better fallbacks
	languages and audio track names

2009-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_languages),
	(bacon_video_widget_get_language): Fix API, -2 was for
	"no audio" track, which we don't really want to support,
	avoids warnings when there's only one audio track.
	Also avoid showing the redundant "Auto" and "AUDIO 0" tracks
	when there's only one audio track

2009-05-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c (totem_options_register_remote_commands):
	* src/totem-options.h:
	* src/totem.c (main): Register the remote commands for
	use by UniqueApp, fixes remote commands not working...

2009-05-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_remote_command_get_type):
	Add missing enum values to the GEnumClass

2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_do_navigation_query), (bvw_handle_element_message),
	(bacon_video_widget_has_menus):
	* src/backend/bacon-video-widget.h:

	Provide a method to know if there are buttons currently
	onscreen.

2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_element_msg_sync):
	Avoid a race with xoverlay interface discovery. Because the