@@ -554,10 +554,10 @@ for plugin in ${used_plugins}; do
 			fi
 		;;
 		youtube)
-			PKG_CHECK_MODULES(LIBGDATA, libgdata >= 0.1.1,
+			PKG_CHECK_MODULES(LIBGDATA, libgdata >= 0.4.0,
 				[HAVE_LIBGDATA=yes], [HAVE_LIBGDATA=no])
 			if test "${HAVE_LIBGDATA}" != "yes" ; then
-				plugin_error_or_ignore "you need libgdata >= 0.1.1 installed for the YouTube plugin"
+				plugin_error_or_ignore "you need libgdata >= 0.4.0 installed for the YouTube plugin"
 				add_plugin="0"
 			fi
 
